alex-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alex-api
  namespace: alex-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alex-api
  template:
    metadata:
      labels:
        app: alex-api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: alex-api
        image: ghcr.io/anorum/alex-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
