alex-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alex-api
  namespace: alex-api
  labels:
    app: alex-api
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: alex-api
