alex-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alex-api
  namespace: alex-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Alex's FastAPI Application
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: api.png
    gethomepage.dev/name: Alex API
spec:
  ingressClassName: nginx
  rules:
    - host: api.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alex-api
                port:
                  number: 8000
